# generaptor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST.yml  pull_request.md
.github/workflows/: python-app.yml
doc/: .gitignore  Makefile  README.md
doc/source/: conf.py  index.rst  license.rst
doc/source/_static/: custom.css
doc/source/api/: modules.rst
docker/: Dockerfile  README.md  docker-entrypoint.sh
generaptor/: __init__.py  main.py
generaptor/api/: __init__.py  cache.py  collection.py  collector.py  config.py  custom_profile.py  distribution.py  ruleset.py  targetset.py
generaptor/command/: __init__.py  extract.py  generate.py  get_fingerprint.py  get_globs.py  get_metadata.py  get_profiles.py  get_rules.py  get_secret.py  get_targets.py  new_profile.py  new_rule.py  new_target.py  refresh.py  update.py
generaptor/command/generate/: __init__.py  darwin.py  helper.py  linux.py  windows.py
generaptor/concept/: __init__.py  cache.py  collection.py  collector.py  config.py  distribution.py  profile.py  profile_set.py  rule_set.py  ruleset.py  target_set.py  targetset.py
generaptor/data/: linux.collector.yml  linux.collector.yml.jinja  linux.generate.targets.py  linux.rules.csv  linux.targets.csv  windows.collector.yml  windows.generate.py  windows.rules.csv  windows.targets.csv
generaptor/data/config/darwin/: collector.yml.jinja  generate.py  profiles.jsonl  rules.csv  rules.jsonl  targets.csv  targets.jsonl
generaptor/data/config/linux/: collector.yml.jinja  generate.py  profiles.jsonl  rules.csv  rules.jsonl  targets.csv  targets.jsonl
generaptor/data/config/linux/profiles/: default.json
generaptor/data/config/windows/: collector.yml.jinja  generate.py  profiles.jsonl  rules.csv  rules.extra.csv  rules.jsonl  targets.csv  targets.jsonl
generaptor/data/config/windows/profiles/: default.json
generaptor/helper/: __init__.py  cache.py  collection.py  crypto.py  csv.py  distrib.py  generation.py  github.py  http.py  json.py  logging.py  prompt.py  validation.py
test/: test
