[metadata]
url = https://github.com/cert-edf/generaptor
author = CERT-EDF
author_email = cert@edf.fr
name = generaptor
description = Generaptor
long_description = file: README.md
keywords = cli, generator, velociraptor, offline, triage
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: Security

[options]
packages = find:
install_requires =
    pick<2.0.0
    rich<13.0.0
    jinja2<4.0.0
    cryptography<40.0.0

[options.entry_points]
console_scripts =
    generaptor = generaptor.main:app
